Adds subscribe section in footer

--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
             <a href="tel:+380961111111" class="link-footer link"> +38 096 111 11 11 </a>
           </address>
         </section>
+
         <section class="join-section">
           <h2 class="visually-hidden">Социальные сети</h2>
           <b class="join-caption">ПРИСОЕДИНЯЙТЕСЬ</b>
@@ -465,6 +466,21 @@
               </a>
             </li>
           </ul>
+        </section>
+
+        <section class="subscribe-section">
+          <h2 class="visually-hidden">Подписка на рассылку</h2>
+          <b class="subscribe-caption">Подпишитесь на рассылку</b>
+
+          <form class="subscribe-form">
+            <input type="email" name="email" id="email" placeholder="E-mail" class="email-field" />
+            <button class="subcribe-btn button">
+              Подписаться
+              <svg class="icon-send" width="24px" height="24px">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </section>
       </div>
     </footer>
