--- a/portfolio.html
+++ b/portfolio.html
@@ -387,8 +387,10 @@
           <b class="subscribe-caption">Подпишитесь на рассылку</b>
 
           <form class="subscribe-form">
-            <input type="email" name="email" id="email" placeholder="E-mail" class="email-field" />
-            <button class="subcribe-btn button">
+            <label>
+              <input type="email" name="email" placeholder="E-mail" class="email-field" />
+            </label>
+            <button class="form-btn button" type="submit">
               Подписаться
               <svg class="icon-send" width="24px" height="24px">
                 <use href="./images/sprite.svg#icon-send"></use>
